--- a/br_test_market_close/public/i18n/es.json
+++ b/br_test_market_close/public/i18n/es.json
@@ -142,7 +142,7 @@
     "278684544": "obtener sublista desde # desde el final",
     "282319001": "Revise su foto",
     "284527272": "antimoda",
-    "289898640": "TERMS OF USE",
+    "289898640": "TÉRMINOS DE USO",
     "292491635": "Si selecciona \"Stop loss\" y especifica una cantidad para limitar su pérdida, su posición se cerrará automáticamente cuando su pérdida sea mayor o igual a esta cantidad. Su pérdida puede ser mayor que la cantidad que ingresó dependiendo del precio de mercado al cierre.",
     "292589175": "Esto mostrará la SMA para el período especificado, usando una lista de velas.",
     "294305803": "Administrar la configuración de la cuenta",
@@ -337,7 +337,7 @@
     "626175020": "Multiplicador de desviación estándar ascendente {{ input_number }}",
     "626809456": "Reenviar",
     "627292452": "<0>Su comprobante de identidad o de domicilio</0>no cumple nuestros requisitos. Por favor, revise su correo electrónico para más instrucciones.",
-    "627526394": "All you need from now is one password",
+    "627526394": "Todo lo que necesita a partir de ahora es una contraseña",
     "627814558": "Este bloque devuelve un valor cuando una condición es verdadera. Use este bloque dentro de cualquiera de los bloques de funciones anteriores.",
     "629145209": "En caso que se seleccione la operación \"Y\", el bloque devuelve \"Verdadero\" solo si ambos valores dados son \"Verdaderos\"",
     "632398049": "Este bloque asigna un valor nulo a un elemento o afirmación.",
@@ -471,7 +471,7 @@
     "835058671": "Total de precio de compra",
     "835350845": "Agregue unas palabras más. Las palabras poco comunes son mejores.",
     "837066896": "Su documento se está revisado, vuelva a consultarnos en 1-3 días.",
-    "839618971": "ADDRESS",
+    "839618971": "DIRECCIÓN",
     "839805709": "Para verificarlo sin problemas, necesitamos una mejor foto",
     "843508407": "Plataforma de operacion de activos múltiples todo en uno para el trading con margen y los CFDs.",
     "845213721": "Cerrar sesión",
@@ -481,7 +481,7 @@
     "851508288": "Este bloque restringe un número dado dentro de un rango establecido.",
     "852583045": "Cadena de la lista de ticks",
     "854399751": "El código de dígitos solo debe contener números.",
-    "856713568": "Too many failed attempt",
+    "856713568": "Demasiados intentos fallidos",
     "857986403": "hacer algo",
     "860319618": "Turismo",
     "862283602": "Número de teléfono*",
@@ -603,7 +603,7 @@
     "1048947317": "Lo sentimos, esta aplicación no está disponible en {{clients_country}}.",
     "1049384824": "Alza",
     "1050844889": "Informes",
-    "1052137359": "Family name*",
+    "1052137359": "Apellido*",
     "1053159279": "Nivel de educación",
     "1055313820": "No se detectó ningún documento",
     "1056325608": "Ha creado una cuenta DMT5 {{account_title}}.",
@@ -658,7 +658,7 @@
     "1134879544": "Ejemplo de un documento con reflejo",
     "1143730031": "La dirección es {{ direction_type }}",
     "1144028300": "Conjunto de índice de fuerza relativa (RSIA)",
-    "1144288893": "We’ve upgraded our system to support a single, more secure password across Deriv. Once you’ve set a new password, you can use it to log into all your Deriv and DMT5 accounts.",
+    "1144288893": "Hemos actualizado nuestro sistema para aceptar una contraseña única y más segura en Deriv. Una vez que haya establecido una nueva contraseña, puede usarla para iniciar sesión en todas sus cuentas Deriv y DMT5.",
     "1145927365": "Ejecuta los bloques dentro tras un número determinado de segundos",
     "1151964318": "ambos lados",
     "1154021400": "lista",
@@ -813,8 +813,8 @@
     "1367023655": "Para garantizar que su pérdida no exceda su inversión, su contrato se cerrará automáticamente cuando su pérdida sea igual a <0/>.",
     "1367488817": "4. Restablecer las condiciones del contrato",
     "1367990698": "Índice de volatilidad 10",
-    "1368002992": "Go to Settings",
-    "1369709538": "Our terms of use",
+    "1368002992": "Ir a la configuración",
+    "1369709538": "Nuestros Términos de uso",
     "1371193412": "Cancelar",
     "1371641641": "Abrea el enlace en su móvil",
     "1374627690": "Saldo máx. de la cuenta",
@@ -900,7 +900,7 @@
     "1484336612": "Este bloque se usa para terminar o continuar un ciclo, y se puede colocar en cualquier lugar dentro de un bloque de ciclo.",
     "1490583127": "DBot no está listo para cuentas reales",
     "1491392301": "<0>Vendido por</0>: {{sold_for}}",
-    "1492686447": "Your MT5 Financial STP account will be opened through Deriv (FX) Ltd. All trading in this account is subject to the regulations and guidelines of the Labuan Financial Service Authority (LFSA). None of your other accounts, including your Deriv account, is subject to the regulations and guidelines of the Labuan Financial Service Authority (LFSA).",
+    "1492686447": "Su cuenta Financiera STP MT5 se abrirá a través de Deriv (FX) Ltd. Todas las operaciones en esta cuenta están sujetas a las regulaciones y pautas de la Autoridad de Servicios Financieros de Labuan (LFSA). Ninguna de sus otras cuentas, incluida su cuenta Deriv, está sujeta a las regulaciones y pautas de la Autoridad de Servicios Financieros de Labuan (LFSA).",
     "1496810530": "GBP/AUD",
     "1497911454": "Establezca su <0>límite de facturación de 30 días</0> para eliminar los límites de depósito.",
     "1499080621": "Intento para realizar una operación no válida.",
@@ -925,7 +925,7 @@
     "1534796105": "Obtiene un valor de variable",
     "1539108340": "Índice EUR",
     "1540585098": "Rechazar",
-    "1541818425": "Reset password",
+    "1541818425": "Restablecer contraseña",
     "1541969455": "Ambos",
     "1544642951": "Si selecciona \"Sólo Abajo\", usted gana el pago si los ticks consecutivos suben sucesivamente después del precio de entrada. No se gana el pago si algún tick cae o es igual a cualquier de los ticks anteriores.",
     "1549098835": "Retiros totales",
@@ -1064,7 +1064,7 @@
     "1791971912": "Reciente",
     "1794815502": "Descargar su historial de transacciones.",
     "1801093206": "Obtenga la lista de velas",
-    "1803338729": "Choose what type of contract you want to trade. For example, for the Rise/Fall trade type you can choose one of three options: Rise, Fall, or Both. Selected option will determine available options for the Purchase block.",
+    "1803338729": "Elija que tipo de contrato desea operar. Por ejemplo, para el tipo Arriba / Abajo puede elegir entre una de las tres opciones: Arriba, Abajo o Ambos. La opción seleccionada determinará las opciones disponibles para el bloque Compra.",
     "1804789128": "{{display_value}} Ticks",
     "1806355993": "Sin comisiones",
     "1808058682": "Los bloques fueron cargados con éxito",
@@ -1136,7 +1136,7 @@
     "1903437648": "Se detectó una foto borrosa",
     "1905032541": "Ahora estamos listos para verificar su identidad",
     "1906639368": "Si es la primera vez que intenta crear una contraseña, o si la ha olvidado, reiníciela.",
-    "1908023954": "Sorry, an error occurred while processing your request.",
+    "1908023954": "Lo sentimos, ha ocurrido un error mientras se procesaba su solicitud.",
     "1908239019": "Asegúrese de que todo el documento esté en la foto",
     "1909769048": "mediana",
     "1914014145": "Hoy",
@@ -1147,7 +1147,7 @@
     "1919030163": "Consejos para sacarse una buena selfie",
     "1920217537": "Comparar",
     "1920468180": "Cómo usar el bloque SMA",
-    "1921634159": "A few personal details",
+    "1921634159": "Algunos datos personales",
     "1922529883": "Índice Boom 1000",
     "1922955556": "Utilice un patrón de teclado más largo con más giros",
     "1923431535": "\"Stop loss\" está desactivado y solo estará disponible cuando expire la \"Cancelación del contrato\".",
@@ -1238,7 +1238,7 @@
     "2054500647": "Esta política de quejas, que puede cambiar de vez en cuando, se aplica a su (s) cuenta (s) registrada (s) con Deriv (SVG) LLC y Deriv (V) Ltd.",
     "2054889300": "Crear \"%1\"",
     "2055317803": "Copie el enlace a su navegador móvil",
-    "2056801626": "Confirm your password",
+    "2056801626": "Confirmar su contraseña",
     "2057419639": "Punto de salida",
     "2062912059": "función {{ function_name }} {{ function_params }}",
     "2063655921": "Al comprar el contrato \"Cerrar-Bajo\", ganará el valor del multiplicador por la diferencia entre el cierre y el bajo a lo largo la duración del contrato.",
@@ -1309,9 +1309,9 @@
     "-1575567374": "código postal",
     "-755626951": "Complete sus datos personales",
     "-1024240099": "Dirección",
-    "-584911871": "Select wallet currency",
+    "-584911871": "Seleccionar la moneda de la billetera",
     "-1461267236": "Por favor elija su moneda",
-    "-1352330125": "CURRENCY",
+    "-1352330125": "MONEDA",
     "-1027595143": "Menos de 25.000 $",
     "-40491332": "25,000 $ - 50,000 $",
     "-1139806939": "$50.001 - $100.000",
@@ -1463,11 +1463,11 @@
     "-526636259": "Error 404",
     "-1030759620": "Funcionarios de gobierno",
     "-1662154767": "una factura reciente de servicios públicos (por ejemplo, electricidad, agua, gas, teléfono fijo o internet), extracto bancario o carta emitida por el gobierno con su nombre y esta dirección.",
-    "-190838815": "We need this for verification. If the information you provide is fake or inaccurate, you won’t be able to deposit and withdraw.",
-    "-223216785": "Second line of address*",
+    "-190838815": "Necesitamos esto para la verificación. Si la información que proporciona es falsa o inexacta, no podrá depositar ni retirar.",
+    "-223216785": "Segunda línea de dirección*",
     "-594456225": "Segunda línea de dirección",
     "-1315410953": "Estado/Provincia",
-    "-1940457555": "Postal/ZIP Code*",
+    "-1940457555": "Código postal*",
     "-1964954030": "Código postal",
     "-1541554430": "Siguiente",
     "-71696502": "Anterior",
@@ -1618,7 +1618,7 @@
     "-1738671831": "La contraseña debe tener entre 8 y 25 caracteres.",
     "-1776746512": "La contraseña actual y la nueva contraseña no pueden ser iguales.",
     "-1465674403": "Cambie su contraseña Deriv",
-    "-1233938428": "We recommend using a unique password — one that you don’t use for any other sites.",
+    "-1233938428": "Recomendamos utilizar una contraseña única, la que no utilice para ningún otro sitio.",
     "-1868608634": "Contraseña actual",
     "-89973258": "Reenviar correo electrónico en {{seconds}}s",
     "-1617352279": "El correo electrónico está en su bandeja de spam (a veces las cosas se pierden allí).",
@@ -2203,16 +2203,16 @@
     "-382495564": "Contraseña cambiada",
     "-2042845290": "Su contraseña de inversionista ha sido cambiada.",
     "-1882295407": "Su contraseña sido cambiada.",
-    "-985529779": "Your DMT5 password is now the same as your Deriv account login password. To reset, please go to <0>Settings</0> page to change your password.",
+    "-985529779": "Su contraseña DMT5 ahora es la misma que la contraseña de inicio de sesión de su cuenta Deriv. Para restablecerla, diríjase a la página de <0>Configuración</0> para efectuar cambios.",
     "-254497873": "Use esta contraseña para otorgar acceso de visualización a otro usuario. Mientras que pueden ver su cuenta comercial, no podrán comerciar ni realizar ninguna otra acción.",
     "-161656683": "Actual contraseña de inversor",
     "-374736923": "Nueva contraseña de inversor",
     "-1793894323": "Crear o restablecer la contraseña de inversor",
     "-1444706724": "Administre la contraseña de cuenta real DMT5 {{account_title}}",
-    "-1234339445": "All you’ll need from now is one password",
-    "-1418023997": "Unavailable because of too many failed attempts. Please try again in a minute or reset your account password to continue.",
-    "-140300511": "Please confirm your Deriv password to create a DMT5 account. If you’ve forgotten your password, click <0>Reset password</0>.",
-    "-1987408434": "Your MT5 Financial STP account will be opened through Deriv (BVI) Ltd. All trading in this account is subject to the regulations and guidelines of the British Virgin Islands Financial Services Commission (BVIFSC). None of your other accounts, including your Deriv account, is subject to the regulations and guidelines of the British Virgin Islands Financial Services Commission (BVIFSC).",
+    "-1234339445": "Todo lo que necesita a partir de ahora es una contraseña",
+    "-1418023997": "No disponible debido a demasiados intentos fallidos. Vuelva a intentarlo en un minuto o restablezca la contraseña de su cuenta para continuar.",
+    "-140300511": "Confirme su contraseña de Deriv para crear una cuenta DMT5. Si olvidó su contraseña, haga clic en <0>Restablecer contraseña</0>.",
+    "-1987408434": "Su cuenta Financiera STP MT5 se abrirá a través de Deriv (BVI) Ltd. Todas las operaciones en esta cuenta están sujetas a las regulaciones y pautas de la Comisión de Servicios Financieros de las Islas Vírgenes Británicas (BVIFSC). Ninguna de sus otras cuentas, incluida su cuenta Deriv, está sujeta a las regulaciones y pautas de la Comisión de Servicios Financieros de las Islas Vírgenes Británicas (BVIFSC).",
     "-1281078994": "Elija un servidor para su cuenta DMT5 {{ account_type }}",
     "-1752211105": "Transferir ahora",
     "-2115960164": "Restablecer contraseña DMT5",
@@ -2225,9 +2225,9 @@
     "-1756858413": "<0></0> se ha acreditado en su cuenta {{title}} DMT5.",
     "-149993085": "Nuevo saldo actual",
     "-538215347": "Depósitos netos",
-    "-280147477": "All transactions",
+    "-280147477": "Todas las transacciones",
     "-137444201": "Comprar",
-    "-360975483": "You've made no transactions of this type during this period.",
+    "-360975483": "No ha realizado transacciones de este tipo durante este período.",
     "-1231210510": "Tick",
     "-1239477911": "segundo",
     "-1585766960": "min",
