--- a/br_test_market_close/public/i18n/it.json
+++ b/br_test_market_close/public/i18n/it.json
@@ -142,7 +142,7 @@
     "278684544": "ottieni sotto elenco da # dalla fine",
     "282319001": "Controlla la tua fotografia",
     "284527272": "antimode",
-    "289898640": "TERMS OF USE",
+    "289898640": "TERMINI D'USO",
     "292491635": "Se selezioni \"Stop Loss\" specificando l'importo del limite sulle perdite, la posizione verrà chiusa automaticamente quando la perdita raggiunge un valore pari o superiore a tale importo. Le perdite potrebbero superare l'importo selezionato in base al prezzo di chiusura del mercato.",
     "292589175": "Mostrerà l'indicatore SMA per il periodo specificato utilizzando un elenco di candele.",
     "294305803": "Gestisci impostazioni conto",
@@ -337,7 +337,7 @@
     "626175020": "Moltiplicatore al rialzo della deviazione standard {{ input_number }}",
     "626809456": "Reinvia",
     "627292452": "<0>La prova a verifica dell'identità o di residenza</0> non ha soddisfatto i nostri requisiti. Controlla la tua e-mail per ulteriori istruzioni.",
-    "627526394": "All you need from now is one password",
+    "627526394": "Avrai bisogno soltanto di una password",
     "627814558": "Questo blocco restituisce un valore quando la condizione è vera. Utilizzalo all'interno di uno dei blocchi di funzione sopra riportati.",
     "629145209": "Se è stata selezionata l'operazione \"AND\", il blocco torna \"Vero\" solo se entrambi i valori sono \"Veri\"",
     "632398049": "Questo blocco attribuisce un valore nullo a un item o una dichiarazione.",
@@ -471,7 +471,7 @@
     "835058671": "Prezzo di acquisto totale",
     "835350845": "Aggiungi una o due parole. Sono preferibili parole non comuni.",
     "837066896": "Stiamo esaminando il documento, riceverai risposta entro 1-3 giorni.",
-    "839618971": "ADDRESS",
+    "839618971": "INDIRIZZO",
     "839805709": "Per verificare facilmente la tua identità occorre una foto più nitida",
     "843508407": "Piattaforma di trading multi-asset completa per il trading con margine e su CFD.",
     "845213721": "Logout",
@@ -481,7 +481,7 @@
     "851508288": "Questo blocco vincola un dato numero all'interno di un intervallo stabilito.",
     "852583045": "Stringa lista di tick",
     "854399751": "Il codice può contenere solo numeri.",
-    "856713568": "Too many failed attempt",
+    "856713568": "Troppi tentativi falliti",
     "857986403": "esegui operazione",
     "860319618": "Turismo",
     "862283602": "Numero di telefono*",
@@ -528,7 +528,7 @@
     "931619246": "Piattaforma supportata:",
     "933126306": "Inserisci il testo qui",
     "934835052": "Profitto potenziale",
-    "934932936": "PERSONAL",
+    "934932936": "PERSONALE",
     "937237342": "Il nome della strategia non può essere vuoto",
     "937831119": "Cognome*",
     "937992258": "Tabella",
@@ -603,7 +603,7 @@
     "1048947317": "Siamo spiacenti, questa app non è disponibile in {{clients_country}}.",
     "1049384824": "Rialzo",
     "1050844889": "Report",
-    "1052137359": "Family name*",
+    "1052137359": "Cognome*",
     "1053159279": "Livello di istruzione",
     "1055313820": "Nessun documento trovato",
     "1056325608": "Hai creato un conto {{account_title}} DMT5.",
@@ -658,7 +658,7 @@
     "1134879544": "Esempio di un documento con riflessi",
     "1143730031": "La direzione è {{ direction_type }}",
     "1144028300": "Array di indici di forza relativa (RSIA)",
-    "1144288893": "We’ve upgraded our system to support a single, more secure password across Deriv. Once you’ve set a new password, you can use it to log into all your Deriv and DMT5 accounts.",
+    "1144288893": "Abbiamo aggiornato il sistema in modo che serva una sola password più sicura su Deriv. Una volta impostata, potrai usarla per accedere a tutti i conti Deriv e DMT5.",
     "1145927365": "Attiva i blocchi interni dopo un determinato numero di secondi",
     "1151964318": "entrambi i lati",
     "1154021400": "elenco",
@@ -813,8 +813,8 @@
     "1367023655": "Per assicurarti che la perdita non superi la puntata, il contratto verrà chiuso automaticamente quando la perdita raggiunge <0/>.",
     "1367488817": "4. Condizioni per il riavvio dei trade",
     "1367990698": "Indice di volatilità 10",
-    "1368002992": "Go to Settings",
-    "1369709538": "Our terms of use",
+    "1368002992": "Vai alle Impostazioni",
+    "1369709538": "I nostri termini d'uso",
     "1371193412": "Annulla",
     "1371641641": "Apri il link sul tuo smartphone",
     "1374627690": "Saldo massimo del conto",
@@ -900,7 +900,7 @@
     "1484336612": "Il blocco è usato per concludere o continuare un ciclo, e può essere posizionato ovunque all'interno di un blocco del ciclo.",
     "1490583127": "Il Dbot non è ancora pronto per conti reali",
     "1491392301": "<0>Venduto per</0>: {{sold_for}}",
-    "1492686447": "Your MT5 Financial STP account will be opened through Deriv (FX) Ltd. All trading in this account is subject to the regulations and guidelines of the Labuan Financial Service Authority (LFSA). None of your other accounts, including your Deriv account, is subject to the regulations and guidelines of the Labuan Financial Service Authority (LFSA).",
+    "1492686447": "Il tuo conto reale STP di MT5 verrà aperto tramite Deriv (FX) Ltd. I trade effettuati con questo conto sono soggetti a regolamenti e linee guida della Labuan Financial Service Authority (LFSA); nessuno degli altri conti, incluso quello Deriv, fa riferimento a tali regolamenti e linee guida.",
     "1496810530": "GBP/AUD",
     "1497911454": "Imposta il <0>limite di turnover su 30 giorni</0> per eliminare i limiti sui depositi.",
     "1499080621": "Operazione non valida.",
@@ -925,7 +925,7 @@
     "1534796105": "Ricevi il valore della variabile",
     "1539108340": "Indice EUR",
     "1540585098": "Rifiuta",
-    "1541818425": "Reset password",
+    "1541818425": "Reimposta la password",
     "1541969455": "Entrambi",
     "1544642951": "Selezionando \"Solo ascendente\", ottieni il payout se tick consecutivi superano successivamente il punto di entrata. Non ottieni alcun payout se qualsiasi tick è minore o uguale a uno dei tick precedenti.",
     "1549098835": "Totale prelievo",
@@ -1064,7 +1064,7 @@
     "1791971912": "Recente",
     "1794815502": "Scarica la cronologia delle tue operazioni.",
     "1801093206": "Ottieni l'elenco candele",
-    "1803338729": "Choose what type of contract you want to trade. For example, for the Rise/Fall trade type you can choose one of three options: Rise, Fall, or Both. Selected option will determine available options for the Purchase block.",
+    "1803338729": "Selezione la tipologia di contratto con cui fare trading. Ad esempio, per la tipologia Rialzo/Ribasso puoi scegliere una di tre opzioni: Rialzo, Ribasso o entrambe. L'opzione selezionata determinerà le opzioni disponibili per il blocco Acquisti.",
     "1804789128": "{{display_value}} tick",
     "1806355993": "Nessuna commissione",
     "1808058682": "I blocchi sono stati caricati",
@@ -1136,7 +1136,7 @@
     "1903437648": "Fotografia sfocata",
     "1905032541": "Siamo pronti a verificare la tua identità",
     "1906639368": "Se è la prima volta che crei una password o hai dimenticato la tua, ti invitiamo a reimpostarla.",
-    "1908023954": "Sorry, an error occurred while processing your request.",
+    "1908023954": "Siamo spiacenti, si è verificato un errore durante l'elaborazione della tua richiesta.",
     "1908239019": "Assicurati che l'immagine comprenda il documento per intero",
     "1909769048": "mediana",
     "1914014145": "Oggi",
@@ -1147,7 +1147,7 @@
     "1919030163": "Consigli per scattare un selfie adeguato",
     "1920217537": "Confronta",
     "1920468180": "Come utilizzare il blocco SMA",
-    "1921634159": "A few personal details",
+    "1921634159": "Alcune informazioni personali",
     "1922529883": "Indice Boom 1000",
     "1922955556": "Usa un tipo di tastiera più lunga con maggiori opzioni di rotazione",
     "1923431535": "L'opzione “Stop loss” è stata disattivata; tornerà disponibile solo dopo il termine di scadenza della \"Cancellazione\".",
@@ -1238,7 +1238,7 @@
     "2054500647": "La presente politica sui reclami potrebbe cambiare nel tempo, e si applica ai conti registrati con Deriv (SVG) LLC e Deriv (V) Ltd.",
     "2054889300": "Crea \"%1\"",
     "2055317803": "Copia il link sul browser del tuo smartphone",
-    "2056801626": "Confirm your password",
+    "2056801626": "Conferma la nuova password",
     "2057419639": "Prezzo di uscita",
     "2062912059": "funzione {{ function_name }} {{ function_params }}",
     "2063655921": "Acquistando il contratto \"Close-to-Low\", la vincita corrisponderà al prodotto tra il moltiplicatore e la differenza tra il valore di chiusura (close) e il valore minimo (low) nel corso della durata del contratto.",
@@ -1309,9 +1309,9 @@
     "-1575567374": "codice postale/CAP",
     "-755626951": "Complete le informazioni sul tuo indirizzo",
     "-1024240099": "Indirizzo",
-    "-584911871": "Select wallet currency",
+    "-584911871": "Seleziona valuta portafoglio",
     "-1461267236": "Scegli una valuta",
-    "-1352330125": "CURRENCY",
+    "-1352330125": "VALUTA",
     "-1027595143": "Meno di 25.000 $",
     "-40491332": "25.000 $ - 50.000 $",
     "-1139806939": "50.001 $ - 100.000 $",
@@ -1463,11 +1463,11 @@
     "-526636259": "Errore 404",
     "-1030759620": "Funzionari governativi",
     "-1662154767": "bolletta di utenza (per esempio di elettricità, acqua, gas, internet o telefonica), saldo bancario o documento emesso dal governo con il tuo nome e il tuo indirizzo.",
-    "-190838815": "We need this for verification. If the information you provide is fake or inaccurate, you won’t be able to deposit and withdraw.",
-    "-223216785": "Second line of address*",
+    "-190838815": "Ne abbiamo bisogno ai fini della verifica: se le informazioni sono false o imprecise, non ti sarà possibile prelevare o depositare fondi.",
+    "-223216785": "Seconda riga dell'indirizzo*",
     "-594456225": "Seconda riga dell'indirizzo",
     "-1315410953": "Stato/Provincia",
-    "-1940457555": "Postal/ZIP Code*",
+    "-1940457555": "Codice postale/ZIP*",
     "-1964954030": "Codice postale/CAP",
     "-1541554430": "Successivo",
     "-71696502": "Precedente",
@@ -1618,7 +1618,7 @@
     "-1738671831": "La password deve può contenere 8-25 caratteri.",
     "-1776746512": "La password attuale e quella nuova non possono essere identiche.",
     "-1465674403": "Modifica la password Deriv",
-    "-1233938428": "We recommend using a unique password — one that you don’t use for any other sites.",
+    "-1233938428": "Suggeriamo di usare una password unica, che non usi per nessun altro sito web.",
     "-1868608634": "Password attuale",
     "-89973258": "Invia di nuovo l'e-mail tra {{seconds}}s",
     "-1617352279": "L' e-mail è nella cartella spam (dove alle volte finiscono i messaggi).",
@@ -2203,16 +2203,16 @@
     "-382495564": "La password è cambiata",
     "-2042845290": "La password di investitore è stata modificata.",
     "-1882295407": "La password è stata modificata.",
-    "-985529779": "Your DMT5 password is now the same as your Deriv account login password. To reset, please go to <0>Settings</0> page to change your password.",
+    "-985529779": "Ora la password DMT5 è la stessa che usi per accedere a Deriv. Per reimpostarla, vai sulla pagina <0>Impostazioni</0>.",
     "-254497873": "Utilizza la password per permettere a un altro utente di visualizzare l'accesso: questo potrebbe vedere il tuo conto di trading, ma non potrà effettuare trading né altre operazioni.",
     "-161656683": "Attuale password investitore",
     "-374736923": "Nuova password investitore",
     "-1793894323": "Crea o reimposta la password investitore",
     "-1444706724": "Gestisci la password conto reale {{account_title}} DMT5",
-    "-1234339445": "All you’ll need from now is one password",
-    "-1418023997": "Unavailable because of too many failed attempts. Please try again in a minute or reset your account password to continue.",
-    "-140300511": "Please confirm your Deriv password to create a DMT5 account. If you’ve forgotten your password, click <0>Reset password</0>.",
-    "-1987408434": "Your MT5 Financial STP account will be opened through Deriv (BVI) Ltd. All trading in this account is subject to the regulations and guidelines of the British Virgin Islands Financial Services Commission (BVIFSC). None of your other accounts, including your Deriv account, is subject to the regulations and guidelines of the British Virgin Islands Financial Services Commission (BVIFSC).",
+    "-1234339445": "Avrai bisogno soltanto di una password",
+    "-1418023997": "Non disponibile: hai effettuato troppi tentativi. Prova di nuovo tra un minuto oppure reimposta la password del conto per continuare.",
+    "-140300511": "Conferma la password Deriv per creare un conto DMT5. Se hai dimenticato la password, clicca su <0>Reimposta password</0>.",
+    "-1987408434": "Il tuo conto reale STP di MT5 verrà aperto tramite Deriv (BVI) Ltd. I trade effettuati con questo conto sono soggetti a regolamenti e linee guida della British Virgin Islands Financial Services Commission (BVIFSC); nessuno degli altri conti, incluso quello Deriv, fa riferimento a tali regolamenti e linee guida.",
     "-1281078994": "Scegli una server per il tuo conto {{ account_type }} DMT5",
     "-1752211105": "Trasferisci ora",
     "-2115960164": "Reimposta la password DMT5",
@@ -2225,9 +2225,9 @@
     "-1756858413": "Sono stati accreditati <0></0> sul conto {{title}} DMT5.",
     "-149993085": "Nuovo saldo",
     "-538215347": "Depositi netti",
-    "-280147477": "All transactions",
+    "-280147477": "Tutte le operazioni",
     "-137444201": "Acquista",
-    "-360975483": "You've made no transactions of this type during this period.",
+    "-360975483": "Non hai mai effettuato operazioni di questo tipo nel periodo selezionato.",
     "-1231210510": "Tick",
     "-1239477911": "secondo",
     "-1585766960": "min",
