--- a/br_test_market_close/public/i18n/pl.json
+++ b/br_test_market_close/public/i18n/pl.json
@@ -142,7 +142,7 @@
     "278684544": "uzyskaj listę podrzędną z # od końca",
     "282319001": "Sprawdź swój obraz",
     "284527272": "anty-tryb",
-    "289898640": "TERMS OF USE",
+    "289898640": "WARUNKI UŻYTKOWANIA",
     "292491635": "Jeśli wybierzesz „Stop stratom” i określisz kwotę, aby ograniczyć Twoją stratę, Twoja pozycja zostanie automatycznie zamknięta, gdy Twoja strata jest większa lub równa tej kwocie. Twoja strata może wynieść więcej niż wprowadzona kwota w zależności od ceny rynkowej przy zamknięciu.",
     "292589175": "Wyświetlona zostanie SMA dla określonego okresu, przy użyciu listy świec.",
     "294305803": "Zarządzaj ustawieniami konta",
@@ -337,7 +337,7 @@
     "626175020": "Mnożnik odchylenia standardowego w górę {{ input_number }}",
     "626809456": "Prześlij ponownie",
     "627292452": "<0>Twój dokument potwierdzający tożsamość lub dane adresowe</0> nie spełnił naszych wymogów. Wysłaliśmy dalsze instrukcje drogą e-mailową.",
-    "627526394": "All you need from now is one password",
+    "627526394": "Teraz wystarczy Ci tylko jedno hasło",
     "627814558": "Ten blok zwraca wartość, kiedy warunek jest prawdziwy. Użyj tego bloku w ramach powyższych bloków funkcji.",
     "629145209": "Jeśli zostanie wybrane działanie „ORAZ”, blok zwróci wartość „Prawda”, tylko jeśli obie określone wartości będą miały wartość „Prawda”",
     "632398049": "Ten blok przydziela wartość zerową dla elementu lub twierdzenia.",
@@ -471,7 +471,7 @@
     "835058671": "Całkowita cena zakupu",
     "835350845": "Dodaj kolejne słowo lub dwa. Nietypowe słowa są lepsze.",
     "837066896": "Twój dokument jest weryfikowany, sprawdź ponownie za 1-3 dni.",
-    "839618971": "ADDRESS",
+    "839618971": "ADRES",
     "839805709": "Aby zweryfikować Twoją tożsamość, potrzebujemy lepszego zdjęcia",
     "843508407": "Wszechstronna platforma do handlowania wieloma aktywami, umożliwiająca inwestowanie z dźwignią oraz w kontrakty na różnice kursowe.",
     "845213721": "Wyloguj",
@@ -481,7 +481,7 @@
     "851508288": "Ten blok ogranicza określoną liczbę do wybranego zakresu.",
     "852583045": "Ciąg listy ticków",
     "854399751": "Kod cyfrowy może zawierać tylko cyfry.",
-    "856713568": "Too many failed attempt",
+    "856713568": "Zbyt wiele nieudanych prób",
     "857986403": "zrób coś",
     "860319618": "Turystyka",
     "862283602": "Numer telefonu*",
@@ -528,7 +528,7 @@
     "931619246": "Obsługiwane platformy:",
     "933126306": "Wpisz tu jakiś tekst",
     "934835052": "Potencjalny zysk",
-    "934932936": "PERSONAL",
+    "934932936": "OSOBISTE",
     "937237342": "Nazwa strategii nie może być pusta",
     "937831119": "Nazwisko*",
     "937992258": "Tabela",
@@ -603,7 +603,7 @@
     "1048947317": "Przepraszamy, aplikacja jest niedostępna w kraju: {{clients_country}}.",
     "1049384824": "Wzrost",
     "1050844889": "Raporty",
-    "1052137359": "Family name*",
+    "1052137359": "Nazwisko*",
     "1053159279": "Poziom wykształcenia",
     "1055313820": "Nie wykryto dokumentu",
     "1056325608": "Utworzono konto DMT5 {{account_title}}.",
@@ -658,7 +658,7 @@
     "1134879544": "Przykład prześwietlonego dokumentu",
     "1143730031": "Kierunek to {{ direction_type }}",
     "1144028300": "Szereg wskaźnika względnej siły (RSIA)",
-    "1144288893": "We’ve upgraded our system to support a single, more secure password across Deriv. Once you’ve set a new password, you can use it to log into all your Deriv and DMT5 accounts.",
+    "1144288893": "Zaktualizowaliśmy nasz system, aby umożliwić obsługiwanie jednego, bardziej bezpiecznego hasła na Deriv. Po ustanowieniu nowego hasła możesz używać go do logowania na wszystkie swoje konta Deriv i DMT5.",
     "1145927365": "Uruchom bloki wewnętrzne po określonej liczbie sekund",
     "1151964318": "obie strony",
     "1154021400": "lista",
@@ -813,8 +813,8 @@
     "1367023655": "Aby zapewnić, że Twoje straty nie przekroczą Twojej stawki, Twój kontrakt zostanie zamknięty automatycznie, kiedy Twoja strata wyniesie <0/>.",
     "1367488817": "4. Warunki zrestartowania handlowania",
     "1367990698": "Wskaźnik zmienności 10",
-    "1368002992": "Go to Settings",
-    "1369709538": "Our terms of use",
+    "1368002992": "Przejdź do ustawień",
+    "1369709538": "Nasze warunki użytkowania",
     "1371193412": "Anuluj",
     "1371641641": "Otwórz link na swoim urządzeniu",
     "1374627690": "Maksymalne saldo konta",
@@ -900,7 +900,7 @@
     "1484336612": "Ten blok jest używany w celu zakończenia lub kontynuowania pętli i można go umieścić w dowolnym miejscu bloku pętli.",
     "1490583127": "DBot nie jest gotowy dla prawdziwych kont",
     "1491392301": "<0>Sprzedano za</0>: {{sold_for}}",
-    "1492686447": "Your MT5 Financial STP account will be opened through Deriv (FX) Ltd. All trading in this account is subject to the regulations and guidelines of the Labuan Financial Service Authority (LFSA). None of your other accounts, including your Deriv account, is subject to the regulations and guidelines of the Labuan Financial Service Authority (LFSA).",
+    "1492686447": "Twoje konto finansowe MT5 STP zostanie otwarte przez Deriv (FX) Ltd. Handlowanie na tym koncie podlega przepisom i zaleceniom Urzędu ds. Usług Finansowych na Labuanie: Labuan Financial Service Authority (LFSA). Żadne inne Twoje konta, również konto Deriv, nie podlegają pod regulacje i zalecenia Urzędu ds. Usług Finansowych na Labuanie: Labuan Financial Service Authority (LFSA).",
     "1496810530": "GBP/AUD",
     "1497911454": "Aby usunąć limity wpłat, ustaw swój <0></0>30-dniowy limit obrotu<0>.",
     "1499080621": "Próba wykonania nieprawidłowej operacji.",
@@ -925,7 +925,7 @@
     "1534796105": "Pobiera wartość zmiennej",
     "1539108340": "Indeks EUR",
     "1540585098": "Odrzuć",
-    "1541818425": "Reset password",
+    "1541818425": "Zresetuj hasło",
     "1541969455": "Oba",
     "1544642951": "Jeśli wybierzesz Tylko wzrosty, zyskasz wygraną, gdy następujące po sobie zmiany ceny są zmianami w górę po punkcie wejściowym. Wypłata nie przysługuje, jeśli cena spada lub jest równa dowolnej poprzedniej zmianie ceny.",
     "1549098835": "Wypłaty ogółem",
@@ -1064,7 +1064,7 @@
     "1791971912": "Ostatnie",
     "1794815502": "Pobierz historię swoich transakcji.",
     "1801093206": "Uzyskaj listę świec",
-    "1803338729": "Choose what type of contract you want to trade. For example, for the Rise/Fall trade type you can choose one of three options: Rise, Fall, or Both. Selected option will determine available options for the Purchase block.",
+    "1803338729": "Wybierz, jakim rodzajem kontraktu chcesz handlować. Na przykład w przypadku kontraktu Wzrost/Spadek możesz wybrać jedną z trzech opcji: Wzrost, Spadek lub obie z nich. Wybrana opcja określi dostępne opcje dla bloku Zakup.",
     "1804789128": "Ticki: {{display_value}}",
     "1806355993": "Brak prowizji",
     "1808058682": "Załadowano bloki",
@@ -1136,7 +1136,7 @@
     "1903437648": "Wykryto zamazane zdjęcie",
     "1905032541": "Mamy już wszystko, aby zweryfikować Twoją tożsamość",
     "1906639368": "Jeśli próbujesz utworzyć hasło pierwszy raz lub nie pamiętasz hasła, zresetuj je.",
-    "1908023954": "Sorry, an error occurred while processing your request.",
+    "1908023954": "Przepraszamy, podczas przetwarzania żądania wystąpił błąd.",
     "1908239019": "Upewnij się, że całość dokumentu jest na zdjęciu",
     "1909769048": "mediana",
     "1914014145": "Dzisiaj",
@@ -1147,7 +1147,7 @@
     "1919030163": "Wskazówki, jak zrobić dobre zdjęcie selfie",
     "1920217537": "Porównaj",
     "1920468180": "Jak używać bloku SMA",
-    "1921634159": "A few personal details",
+    "1921634159": "Kilka informacji osobowych",
     "1922529883": "Indeks Boom 1000",
     "1922955556": "Użyj dłuższego ciągu znaków z klawiatury ze zmianami",
     "1923431535": "Opcja „Stop stratom” jest wyłączona i będzie dostępna dopiero, gdy wygaśnie „Anulowanie transakcji”.",
@@ -1238,7 +1238,7 @@
     "2054500647": "Polityka składania skarg, która może ulegać zmianom co jakiś czas, ma zastosowanie w odniesieniu do Twoich kont zarejestrowanych przez Deriv (SVG) LLC oraz Deriv (V) Ltd.",
     "2054889300": "Utwórz „%1”",
     "2055317803": "Skopiuj link do przeglądarki na swoim urządzeniu mobilnym",
-    "2056801626": "Confirm your password",
+    "2056801626": "Potwierdź swoje hasło",
     "2057419639": "Punkt wyjściowy",
     "2062912059": "funkcja {{ function_name }} {{ function_params }}",
     "2063655921": "W przypadku zakupu kontraktu Zamknięcia-na-Niską zyskasz wypłatę o wartości mnożnika pomnożonego przez różnicę wartości ceny zamknięcia i niskiej w okresie trwania kontraktu.",
@@ -1309,9 +1309,9 @@
     "-1575567374": "kod pocztowy",
     "-755626951": "Uzupełnij swoje dane adresowe",
     "-1024240099": "Adres",
-    "-584911871": "Select wallet currency",
+    "-584911871": "Wybierz walutę portfela",
     "-1461267236": "Wybierz swoją walutę",
-    "-1352330125": "CURRENCY",
+    "-1352330125": "WALUTA",
     "-1027595143": "Mniej niż 25 000 $",
     "-40491332": "25 000 $ - 50 000 $",
     "-1139806939": "50 001 $ - 100 000 $",
@@ -1463,11 +1463,11 @@
     "-526636259": "Błąd 404",
     "-1030759620": "Urzędnicy państwowi",
     "-1662154767": "niedawny rachunek za media (np. prąd, wodę, gaz, linię telefoniczną lub internet), wyciąg z rachunku bankowego lub dokument wydany przez władze rządowe z Twoim imieniem i nazwiskiem i tym adresem.",
-    "-190838815": "We need this for verification. If the information you provide is fake or inaccurate, you won’t be able to deposit and withdraw.",
-    "-223216785": "Second line of address*",
+    "-190838815": "Te dane potrzebne są w celu weryfikacji. Jeśli podane przez Ciebie informacji są nieprawdziwe lub niedokładne, nie będziesz mieć możliwości dokonywania wpłat i wypłat.",
+    "-223216785": "Druga część adresu*",
     "-594456225": "Druga część adresu",
     "-1315410953": "Województwo",
-    "-1940457555": "Postal/ZIP Code*",
+    "-1940457555": "Kod pocztowy*",
     "-1964954030": "Kod pocztowy",
     "-1541554430": "Następny",
     "-71696502": "Poprzedni",
@@ -1618,7 +1618,7 @@
     "-1738671831": "Hasło powinno składać się z 8-25 znaków.",
     "-1776746512": "Obecne hasło i nowe hasło nie mogą być takie same.",
     "-1465674403": "Zmień swoje hasło Deriv",
-    "-1233938428": "We recommend using a unique password — one that you don’t use for any other sites.",
+    "-1233938428": "Zalecamy używanie unikalnego hasła — takiego, które nie jest używane na żadnej innej stronie.",
     "-1868608634": "Obecne hasło",
     "-89973258": "Wyślij wiadomość ponownie za {{seconds}}sek.",
     "-1617352279": "Wiadomość e-mail trafiła do folderu spam (czasami wiadomości się tam gubią).",
@@ -2203,16 +2203,16 @@
     "-382495564": "Zmieniono hasło",
     "-2042845290": "Twoje hasło inwestora zostało zmienione.",
     "-1882295407": "Twoje hasło zostało zmienione.",
-    "-985529779": "Your DMT5 password is now the same as your Deriv account login password. To reset, please go to <0>Settings</0> page to change your password.",
+    "-985529779": "Twoje hasło DMT5 jest teraz takie samo jak hasło do logowania do konta Deriv. Aby je zresetować, przejdź do strony <0>Ustawienia</0> i zmień swoje hasło.",
     "-254497873": "Użyj tego hasła, aby udzielić innemu użytkownikowi prawa podglądu. Będzie mógł zobaczyć Twoje konto handlowe, ale nie będzie mieć możliwości handlowania ani wykonania innych działań.",
     "-161656683": "Obecne hasło inwestora",
     "-374736923": "Nowe hasło inwestora",
     "-1793894323": "Utwórz lub resetuj hasło inwestora",
     "-1444706724": "Zarządzaj hasłem do prawdziwego kontaDMT5 {{account_title}}",
-    "-1234339445": "All you’ll need from now is one password",
-    "-1418023997": "Unavailable because of too many failed attempts. Please try again in a minute or reset your account password to continue.",
-    "-140300511": "Please confirm your Deriv password to create a DMT5 account. If you’ve forgotten your password, click <0>Reset password</0>.",
-    "-1987408434": "Your MT5 Financial STP account will be opened through Deriv (BVI) Ltd. All trading in this account is subject to the regulations and guidelines of the British Virgin Islands Financial Services Commission (BVIFSC). None of your other accounts, including your Deriv account, is subject to the regulations and guidelines of the British Virgin Islands Financial Services Commission (BVIFSC).",
+    "-1234339445": "Teraz wystarczy Ci tylko jedno hasło",
+    "-1418023997": "Niedostępność z powodu zbyt wielu nieudanych prób. Spróbuj ponownie za minutę lub zresetuj hasło do konta, aby kontynuować.",
+    "-140300511": "Potwierdź swoje hasło Deriv, aby utworzyć konto DMT5. Jeśli nie pamiętasz swojego hasła, kliknij <0>Resetuj hasło</0>.",
+    "-1987408434": "Twoje konto finansowe MT5 STP zostanie otwarte przez Deriv (BVI) Ltd. Handlowanie na tym koncie podlega przepisom i zaleceniom Komisji ds. Usług Finansowych Brytyjskich Wysp Dziewiczych: British Virgin Islands Financial Services Commission (BVIFSC). Żadne inne Twoje konta, również konto Deriv, nie podlegają pod regulacje i zalecenia Komisji ds. Usług Finansowych Brytyjskich Wysp Dziewiczych: British Virgin Islands Financial Services Commission (BVIFSC).",
     "-1281078994": "Wybierz serwer dla swojego konta DMT5 {{ account_type }}",
     "-1752211105": "Przelej teraz",
     "-2115960164": "Zresetuj hasło DMT5",
@@ -2225,9 +2225,9 @@
     "-1756858413": "<0></0> zostało naliczone na Twoje konto DMT5 {{title}}.",
     "-149993085": "Nowe obecne saldo",
     "-538215347": "Wpłaty netto",
-    "-280147477": "All transactions",
+    "-280147477": "Wszystkie transakcje",
     "-137444201": "Kup",
-    "-360975483": "You've made no transactions of this type during this period.",
+    "-360975483": "W tym okresie nie zrealizowano żadnej transakcji tego rodzaju.",
     "-1231210510": "Tick",
     "-1239477911": "sekunda",
     "-1585766960": "min.",
