--- a/br_test_market_close/public/i18n/ru.json
+++ b/br_test_market_close/public/i18n/ru.json
@@ -142,7 +142,7 @@
     "278684544": "получить подсписок от # с конца",
     "282319001": "Проверьте свое изображение",
     "284527272": "антимода",
-    "289898640": "TERMS OF USE",
+    "289898640": "УСЛОВИЯ ИСПОЛЬЗОВАНИЯ",
     "292491635": "Если вы выберете «Стоп-лосс» и зададите сумму, ограничивающую ваш убыток, позиция будет закрыта автоматически, если убыток больше или равен этой сумме. Ваш убыток может оказаться больше, чем сумма, которую вы ввели, в зависимости от рыночной цены при закрытии.",
     "292589175": "Этот блок отобразит SMA, созданную на основе списка свечей за указанный временной период.",
     "294305803": "Управление настройками счета",
@@ -337,7 +337,7 @@
     "626175020": "Стандартное отклонение вверх Множитель {{ input_number }}",
     "626809456": "Отправить повторно",
     "627292452": "<0>Ваше подтверждение личности и адреса</0> не соответствует нашим требованиям. Пожалуйста, проверьте свою электронную почту. Мы отправили вам дальнейшие инструкции.",
-    "627526394": "All you need from now is one password",
+    "627526394": "Теперь вам нужен всего один пароль",
     "627814558": "Этот блок возвращает значение, когда условие верно. Используйте этот блок в любом из функциональных блоков выше.",
     "629145209": "В случае, если выбрана операция «И», блок возвращает «Верно», только если оба заданных значения «Верны»",
     "632398049": "Этот блок присваивает нулевое значение элементу или инструкции.",
@@ -471,7 +471,7 @@
     "835058671": "Общая цена покупки",
     "835350845": "Добавьте одно или два необычных слова.",
     "837066896": "Ваши документы проходят проверку. Пожалуйста, подождите от 1 до 3 дней.",
-    "839618971": "ADDRESS",
+    "839618971": "АДРЕС",
     "839805709": "Нам нужно фото более высокого качества, чтобы верифицировать вас",
     "843508407": "Универсальная мульти-активная платформа для CFDs & маржинальной торговли.",
     "845213721": "Выход",
@@ -481,7 +481,7 @@
     "851508288": "Этот блок ограничивает заданное число в пределах установленного диапазона.",
     "852583045": "Строка Списка Тиков",
     "854399751": "Цифровой код должен содержать только цифры.",
-    "856713568": "Too many failed attempt",
+    "856713568": "Слишком много неудачных попыток",
     "857986403": "сделай что-нибудь",
     "860319618": "Туризм",
     "862283602": "Номер телефона*",
@@ -528,7 +528,7 @@
     "931619246": "Поддерживаемая платформа:",
     "933126306": "Введите какой-нибудь текст",
     "934835052": "Потенциальная прибыль",
-    "934932936": "PERSONAL",
+    "934932936": "ЛИЧНЫЕ ДАННЫЕ",
     "937237342": "Поле \"Имя стратегии\" не может быть пустым",
     "937831119": "Фамилия*",
     "937992258": "Таблица",
@@ -603,7 +603,7 @@
     "1048947317": "Извините, это приложение недоступно в {{clients_country}}.",
     "1049384824": "Повышение",
     "1050844889": "Отчеты",
-    "1052137359": "Family name*",
+    "1052137359": "Фамилия*",
     "1053159279": "Уровень образования",
     "1055313820": "Документов не обнаружено",
     "1056325608": "Вы создали {{account_title}} счет DMT5.",
@@ -658,7 +658,7 @@
     "1134879544": "Пример документа с бликами",
     "1143730031": "Направление - {{ direction_type }}",
     "1144028300": "Массив индексов относительной силы (RSIA)",
-    "1144288893": "We’ve upgraded our system to support a single, more secure password across Deriv. Once you’ve set a new password, you can use it to log into all your Deriv and DMT5 accounts.",
+    "1144288893": "Наша обновленная система позволяет вам пользоваться единым, более безопасным паролем на всем Deriv. Установите новый пароль и используйте его для входа на все свои счета Deriv и DMT5.",
     "1145927365": "Запустить блоки, находящиеся внутри, через указанное количество секунд",
     "1151964318": "обе стороны",
     "1154021400": "список",
@@ -814,7 +814,7 @@
     "1367488817": "4. Перезапустить торговые условия",
     "1367990698": "Индекс волатильн. 10",
     "1368002992": "Go to Settings",
-    "1369709538": "Our terms of use",
+    "1369709538": "Наши условия использования",
     "1371193412": "Отменить",
     "1371641641": "Откройте ссылку на своем телефоне",
     "1374627690": "Макс. баланс счета",
@@ -900,7 +900,7 @@
     "1484336612": "Этот блок используется для завершения или продолжения цикла и может быть размещен в любом месте блока цикла.",
     "1490583127": "DBot пока не готов к использованию на реальных счетах",
     "1491392301": "<0>Продано за</0>: {{sold_for}}",
-    "1492686447": "Your MT5 Financial STP account will be opened through Deriv (FX) Ltd. All trading in this account is subject to the regulations and guidelines of the Labuan Financial Service Authority (LFSA). None of your other accounts, including your Deriv account, is subject to the regulations and guidelines of the Labuan Financial Service Authority (LFSA).",
+    "1492686447": "Ваш счет MT5 Финансовый STP будет открыт в Deriv (FX) Ltd. Все операции на этом счете регулируются правилами и руководящими принципами Управления финансовых услуг Лабуана (LFSA). Правила и принципы Управления финансовых услуг Лабуана (LFSA) не распространяются ни на один из ваших других счетов, включая счет Deriv.",
     "1496810530": "GBP/AUD",
     "1497911454": "Пожалуйста, установите <0>30-дневный лимит на оборот счета</0>, чтобы устранить лимиты на пополнение.",
     "1499080621": "Попытка выполнить недопустимую операцию.",
@@ -925,7 +925,7 @@
     "1534796105": "Получает значение переменной",
     "1539108340": "EUR Index",
     "1540585098": "Отклонить",
-    "1541818425": "Reset password",
+    "1541818425": "Изменить пароль",
     "1541969455": "Оба",
     "1544642951": "Выбрав \"Только вверх\", вы получите выплату, если несколько тиков подряд будут расти по отношению к котировке на входе. Если любой тик покажет снижение или будет равен одному из предыдущих тиков, вы не получите выплату.",
     "1549098835": "Общая сумма вывода",
@@ -1064,7 +1064,7 @@
     "1791971912": "Недавние",
     "1794815502": "Загрузить историю транзакций.",
     "1801093206": "Получить список свечей",
-    "1803338729": "Choose what type of contract you want to trade. For example, for the Rise/Fall trade type you can choose one of three options: Rise, Fall, or Both. Selected option will determine available options for the Purchase block.",
+    "1803338729": "Выберите направление контракта. Например, в контракте Повышение/Падение вы можете выбрать одну из трех опций: Повышение, Падение или Оба. Выбранное направление будет определять количество опций, доступных в блоке покупки.",
     "1804789128": "{{display_value}} Тиков",
     "1806355993": "Никаких комиссий",
     "1808058682": "Блоки успешно загружены",
@@ -1136,7 +1136,7 @@
     "1903437648": "Обнаружена размытая фотография",
     "1905032541": "Теперь мы готовы подтвердить вашу личность",
     "1906639368": "Если вы впервые пытаетесь создать пароль или забыли свой пароль, пожалуйста, сбросьте его.",
-    "1908023954": "Sorry, an error occurred while processing your request.",
+    "1908023954": "Извините, при обработке вашего запроса возникла ошибка.",
     "1908239019": "Убедитесь, что на фото весь документ",
     "1909769048": "медиана",
     "1914014145": "Сегодня",
@@ -1147,7 +1147,7 @@
     "1919030163": "Советы, как сделать хорошее селфи",
     "1920217537": "Сравнить",
     "1920468180": "Как пользоваться блоком SMA",
-    "1921634159": "A few personal details",
+    "1921634159": "Некоторые личные данные",
     "1922529883": "Boom 1000 индекс",
     "1922955556": "Используйте более длинные комбинации клавиш с большим количеством поворотов",
     "1923431535": "Функция стоп-лосс деактивирована и станет доступна только после истечения действия функции отмены сделки.",
@@ -1311,7 +1311,7 @@
     "-1024240099": "Адрес",
     "-584911871": "Select wallet currency",
     "-1461267236": "Пожалуйста, выберите валюту",
-    "-1352330125": "CURRENCY",
+    "-1352330125": "ВАЛЮТА",
     "-1027595143": "Менее $25 000",
     "-40491332": "$25 000 - $50 000",
     "-1139806939": "$50 001 - $100 000",
@@ -1463,11 +1463,11 @@
     "-526636259": "Ошибка 404",
     "-1030759620": "Гос. служащие",
     "-1662154767": "недавний счет за коммунальные услуги (электричество, вода, газ, стационарный телефон или интернет), банковская выписка или государственное/муниципальное письмо с вашим именем и этим адресом.",
-    "-190838815": "We need this for verification. If the information you provide is fake or inaccurate, you won’t be able to deposit and withdraw.",
-    "-223216785": "Second line of address*",
+    "-190838815": "Это нужно нам для проверки. Если предоставленная вами информация окажется поддельной или неточной, вы не сможете вносить и снимать средства.",
+    "-223216785": "Вторая строка адреса*",
     "-594456225": "Вторая строка адреса",
     "-1315410953": "Область/регион",
-    "-1940457555": "Postal/ZIP Code*",
+    "-1940457555": "Почтовый код/индекс*",
     "-1964954030": "Почтовый код/индекс",
     "-1541554430": "Следующ.",
     "-71696502": "Назад",
@@ -1618,7 +1618,7 @@
     "-1738671831": "Длина пароля должна быть от 8 до 25 символов.",
     "-1776746512": "Текущий пароль и новый пароль не могут совпадать.",
     "-1465674403": "Изменить пароль Deriv",
-    "-1233938428": "We recommend using a unique password — one that you don’t use for any other sites.",
+    "-1233938428": "Мы рекомендуем использовать уникальный пароль — тот, который вы не используете для других сайтов.",
     "-1868608634": "Текущий пароль",
     "-89973258": "Повторно отправить письмо через {{seconds}}сек.",
     "-1617352279": "Письмо находится в папке со спамом (иногда письма попадают туда).",
@@ -2203,16 +2203,16 @@
     "-382495564": "Пароль изменен",
     "-2042845290": "Ваш инвесторский пароль изменен.",
     "-1882295407": "Ваш пароль изменен.",
-    "-985529779": "Your DMT5 password is now the same as your Deriv account login password. To reset, please go to <0>Settings</0> page to change your password.",
+    "-985529779": "Ваш пароль DMT5 теперь совпадает с паролем для входа на счет Deriv. Перейдите на страницу <0>Настройки</0>, если хотите сбросить пароль.",
     "-254497873": "Используйте этот пароль, чтобы предоставить другому пользователю доступ к просмотру. Они смогут просматривать ваш счет, но не смогут торговать или совершать какие-либо другие действия.",
     "-161656683": "Текущий инвесторский пароль",
     "-374736923": "Новый инвесторский пароль",
     "-1793894323": "Создать или сбросить инвесторский пароль",
     "-1444706724": "Управление паролем реального счета {{account_title}} DMT5",
-    "-1234339445": "All you’ll need from now is one password",
-    "-1418023997": "Unavailable because of too many failed attempts. Please try again in a minute or reset your account password to continue.",
-    "-140300511": "Please confirm your Deriv password to create a DMT5 account. If you’ve forgotten your password, click <0>Reset password</0>.",
-    "-1987408434": "Your MT5 Financial STP account will be opened through Deriv (BVI) Ltd. All trading in this account is subject to the regulations and guidelines of the British Virgin Islands Financial Services Commission (BVIFSC). None of your other accounts, including your Deriv account, is subject to the regulations and guidelines of the British Virgin Islands Financial Services Commission (BVIFSC).",
+    "-1234339445": "Теперь вам нужен всего один пароль",
+    "-1418023997": "Недоступно из-за большого количества неудачных попыток. Повторите попытку через минуту или сбросьте пароль счета, чтобы продолжить.",
+    "-140300511": "Подтвердите пароль Deriv, чтобы открыть счет DMT5. Если вы забыли свой пароль, нажмите <0>Сбросить пароль</0>.",
+    "-1987408434": "Ваш счет MT5 Финансовый STP будет открыт в Deriv (BVI) Ltd. Все операции на этом счете регулируются правилами и руководящими принципами Комиссии по финансовым услугам Британских Виргинских островов (BVIFSC). Правила и принципы Комиссии по финансовым услугам Британских Виргинских островов (BVIFSC) не распространяются ни на один из ваших других счетов, включая ваш счет Deriv.",
     "-1281078994": "Выберите сервер для вашего счета DMT5 {{ account_type }}",
     "-1752211105": "Перевести сейчас",
     "-2115960164": "Сбросить пароль DMT5",
@@ -2225,9 +2225,9 @@
     "-1756858413": "На ваш {{title}} счет DMT5 зачислено <0></0>.",
     "-149993085": "Новый текущий баланс",
     "-538215347": "Чистая сумма пополнения",
-    "-280147477": "All transactions",
+    "-280147477": "Все транзакции",
     "-137444201": "Купить",
-    "-360975483": "You've made no transactions of this type during this period.",
+    "-360975483": "Вы не совершали транзакций такого типа за этот период.",
     "-1231210510": "Тик",
     "-1239477911": "сек.",
     "-1585766960": "мин",
