--- a/br_test_market_close/public/i18n/vi.json
+++ b/br_test_market_close/public/i18n/vi.json
@@ -142,7 +142,7 @@
     "278684544": "lấy danh sách phụ # từ cuối",
     "282319001": "Hãy kiểm tra ảnh của bạn",
     "284527272": "antimode",
-    "289898640": "TERMS OF USE",
+    "289898640": "ĐIỀU KHOẢN SỬ DỤNG",
     "292491635": "Nếu bạn chọn \"Dừng lỗ\" và đưa ra một giá trị nhất định để giới hạn lỗ cho mình, giao dịch của bạn sẽ tự động đóng khi số lỗ lớn hơn hoặc bằng giá trị này. Số lỗ của bạn có thể sẽ lớn hơn giá trị bạn đặt ra do phụ thuộc vào giá của thị trường tại thời điểm đóng.",
     "292589175": "Ở đây sẽ hiển thị SMA trong khoảng thời gian được chỉ định, sử dụng danh sách nến.",
     "294305803": "Cài đặt quản lý tài khoản",
@@ -337,7 +337,7 @@
     "626175020": "Cấp số nhân Lệch Chuẩn Lên {{ input_number }}",
     "626809456": "Gửi lại",
     "627292452": "<0> Xác minh danh tính hoặc xác minh địa chỉ của bạn</0> không đúng với yêu cầu của chúng tôi. Vui lòng kiểm tra email để được hướng dẫn thêm.",
-    "627526394": "All you need from now is one password",
+    "627526394": "Từ giờ bạn chỉ cần một mật khẩu",
     "627814558": "Khung này trả về một giá trị khi một điều kiện là đúng. Sử dụng khung này vào một trong các khung chức năng ở trên.",
     "629145209": "Trong trường hợp nếu thuật toán \"AND\" được chọn, khung sẽ trả về giá trị \"Đúng\" chỉ khi cả hai điều kiện đưa ra là \"Đúng\"",
     "632398049": "Khung này gán giá trị rỗng cho một mục hoặc câu lệnh.",
@@ -471,7 +471,7 @@
     "835058671": "Tổng giá mua",
     "835350845": "Thêm một hoặc hai từ khác. Những từ không phổ biến sẽ tốt hơn.",
     "837066896": "Tài liệu của bạn đang được xem xét, vui lòng đợi thêm 1-3 ngày nữa.",
-    "839618971": "ADDRESS",
+    "839618971": "ĐỊA CHỈ",
     "839805709": "Để việc xác minh dễ dàng, chúng tôi cần một bức ảnh có chất lượng tốt hơn",
     "843508407": "Nền tảng giao dịch tổng hợp đa tài sản cho CFD và giao dịch ký quỹ.",
     "845213721": "Đăng xuất",
@@ -481,7 +481,7 @@
     "851508288": "Khung này ràng buộc một số đã cho trong phạm vi đã đặt.",
     "852583045": "Chuỗi danh sách Tick",
     "854399751": "Mã số chỉ gồm chữ số.",
-    "856713568": "Too many failed attempt",
+    "856713568": "Có quá nhiều lần thử thất bại",
     "857986403": "làm gì đó",
     "860319618": "Thăm quan",
     "862283602": "Số điện thoại*",
@@ -603,7 +603,7 @@
     "1048947317": "Rất tiếc, ứng dụng này không khả dụng tại {{clients_country}}.",
     "1049384824": "Tăng",
     "1050844889": "Báo cáo",
-    "1052137359": "Family name*",
+    "1052137359": "Họ*",
     "1053159279": "Trình độ giáo dục",
     "1055313820": "Không phát hiện tài liệu nào",
     "1056325608": "Bạn đã tạo một tài khoản DMT5 {{account_title}}.",
@@ -658,7 +658,7 @@
     "1134879544": "Ví dụ của tài liệu bị lóa",
     "1143730031": "Xu hướng là {{ direction_type }}",
     "1144028300": "Mảng Chỉ số Tiềm lực Tương đối (RSIA)",
-    "1144288893": "We’ve upgraded our system to support a single, more secure password across Deriv. Once you’ve set a new password, you can use it to log into all your Deriv and DMT5 accounts.",
+    "1144288893": "Chúng tôi đã nâng cấp hệ thống của mình để hỗ trợ một mật khẩu duy nhất, an toàn hơn trên Deriv. Sau khi đặt mật khẩu mới, bạn có thể sử dụng mật khẩu đó để đăng nhập vào tất cả các tài khoản Deriv và MT5 của mình.",
     "1145927365": "Chạy các khung bên trong sau một số giây nhất định",
     "1151964318": "cả hai bên",
     "1154021400": "danh sách",
@@ -813,8 +813,8 @@
     "1367023655": "Để đảm bảo khoản lỗ của bạn không vượt quá số tiền đặt cược của bạn, hợp đồng của bạn sẽ tự động được đóng khi khoản lỗ của bạn bằng<0/>.",
     "1367488817": "4. Khởi động lại điều kiện giao dịch",
     "1367990698": "Chỉ số biến động 10",
-    "1368002992": "Go to Settings",
-    "1369709538": "Our terms of use",
+    "1368002992": "Đi đến Cài đặt",
+    "1369709538": "Điều khoản sử dụng của chúng tôi",
     "1371193412": "Hủy",
     "1371641641": "Mở một đường dẫn trên điện thoại của bạn",
     "1374627690": "Số dư tài khoản tối đa",
@@ -900,7 +900,7 @@
     "1484336612": "Khung này được sử dụng để chấm dứt hoặc tiếp tục một vòng lặp và có thể được đặt ở bất cứ đâu trong khung vòng lặp.",
     "1490583127": "DBot chưa sẵn sàng cho các tài khoản thực",
     "1491392301": "<0>Bán cho</0>: {{sold_for}}",
-    "1492686447": "Your MT5 Financial STP account will be opened through Deriv (FX) Ltd. All trading in this account is subject to the regulations and guidelines of the Labuan Financial Service Authority (LFSA). None of your other accounts, including your Deriv account, is subject to the regulations and guidelines of the Labuan Financial Service Authority (LFSA).",
+    "1492686447": "Tài khoản MT5 tài chính STP của bạn sẽ được mở thông qua Deriv (FX) Ltd. Tất cả giao dịch trong tài khoản này phải tuân theo các quy định và hướng dẫn của Cơ quan dịch vụ tài chính Labuan (LFSA). Không có các tài khoản khác của bạn, bao gồm tài khoản Deriv của bạn, phải tuân theo các quy định và hướng dẫn của Cơ quan dịch vụ tài chính Labuan (LFSA).",
     "1496810530": "GBP/AUD",
     "1497911454": "Xin vui lòng thiết lập <0>30 ngày giới hạn doanh thu</0> của bạn để loại bỏ giới hạn tiền gửi.",
     "1499080621": "Đã cố gắng thực hiện một hoạt động không hợp lệ.",
@@ -925,7 +925,7 @@
     "1534796105": "Lấy giá trị biến",
     "1539108340": "Chỉ số EUR",
     "1540585098": "Từ chối",
-    "1541818425": "Reset password",
+    "1541818425": "Đặt lại Mật Khẩu",
     "1541969455": "Cả hai",
     "1544642951": "Nếu bạn chọn \"Chỉ Tăng\", bạn sẽ thắng nếu các tick liên tục tăng sau điểm khởi đầu. Sẽ không được trả tiền nếu có bất kỳ tick giảm dưới hoặc bằng các tick trước nó.",
     "1549098835": "Tổng số tiền rút",
@@ -1064,7 +1064,7 @@
     "1791971912": "Gần đây",
     "1794815502": "Tải xuống lịch sử giao dịch của bạn.",
     "1801093206": "Lấy danh sách nến",
-    "1803338729": "Choose what type of contract you want to trade. For example, for the Rise/Fall trade type you can choose one of three options: Rise, Fall, or Both. Selected option will determine available options for the Purchase block.",
+    "1803338729": "Chọn loại gói thầu bạn muốn giao dịch. Ví dụ: đối với loại giao dịch Tăng/Giảm, bạn có thể chọn một trong ba tùy chọn: Tăng, Giảm hoặc Cả hai. Quyền chọn được chọn sẽ xác định các tùy chọn khả dụng cho khung Mua.",
     "1804789128": "{{display_value}} ticks",
     "1806355993": "Không có hoa hồng",
     "1808058682": "Khung được tải thành công",
@@ -1136,7 +1136,7 @@
     "1903437648": "Phát hiện ảnh bị mờ",
     "1905032541": "Chúng tôi đã sẵn sàng xác minh danh tính cho bạn",
     "1906639368": "Nếu đây là lần đầu tiên bạn thử tạo một mật khẩu, hoặc bạn đã quên mật khẩu của mình, vui lòng đặt lại mật khẩu.",
-    "1908023954": "Sorry, an error occurred while processing your request.",
+    "1908023954": "Rất tiếc, đã xảy ra lỗi khi đang xử lý yêu cầu của bạn.",
     "1908239019": "Hãy đảm bảo tất cả các tài liệu đã có ở trong ảnh",
     "1909769048": "trung bình",
     "1914014145": "Hôm nay",
@@ -1147,7 +1147,7 @@
     "1919030163": "Các mẹo để có một bức ảnh tự chụp đẹp",
     "1920217537": "So sánh",
     "1920468180": "Cách sử dụng khung SMA",
-    "1921634159": "A few personal details",
+    "1921634159": "Một số chi tiết cá nhân",
     "1922529883": "Chỉ số Boom 1000",
     "1922955556": "Sử dụng \bnhiều ký tự khác nhau trên bàn phím và kéo dài chúng",
     "1923431535": "\"Chặn lỗ\" đã được vô hiệu hóa và chỉ có thể được dùng trở lại khi \"Hủy thỏa thuận\" đã kết thúc.",
@@ -1238,7 +1238,7 @@
     "2054500647": "Chính sách khiếu nại này, có thể thay đổi theo thời gian, áp dụng cho (các) tài khoản của bạn đã đăng ký với Deriv (SVG) LLC và Deriv (V) Ltd.",
     "2054889300": "Tạo \"%1\"",
     "2055317803": "Sao chép đường dẫn vào trình duyệt trên điện thoại của bạn",
-    "2056801626": "Confirm your password",
+    "2056801626": "Xác nhận mật khẩu của bạn",
     "2057419639": "Điểm chốt",
     "2062912059": "chức năng {{ function_name }} {{ function_params }}",
     "2063655921": "Bằng cách mua hợp đồng \"Đóng-tới-Thấp\", bạn sẽ giành được số nhân gấp bội số chênh lệch giữa mức đóng và mức thấp trong suốt thời gian của hợp đồng.",
@@ -1311,7 +1311,7 @@
     "-1024240099": "Địa chỉ",
     "-584911871": "Select wallet currency",
     "-1461267236": "Hãy chọn một loại tiền tệ",
-    "-1352330125": "CURRENCY",
+    "-1352330125": "TIỀN TỆ",
     "-1027595143": "Ít hơn $25,000",
     "-40491332": "$25,000 - $50,000",
     "-1139806939": "$50,001 - $100,000",
@@ -1463,11 +1463,11 @@
     "-526636259": "Lỗi 404",
     "-1030759620": "Các nhân viên chính phủ",
     "-1662154767": "một hóa đơn tiện ích mới đây (ví dụ. điện, nước, ga, điện thoại cố định, hoặc internet), sao kê ngân hàng, hoặc thư do chính phủ cấp với tên của bạn và địa chỉ này.",
-    "-190838815": "We need this for verification. If the information you provide is fake or inaccurate, you won’t be able to deposit and withdraw.",
-    "-223216785": "Second line of address*",
+    "-190838815": "Chúng tôi cần thông tin này để xác minh. Nếu thông tin bạn cung cấp là giả hoặc không chính xác, bạn sẽ không thể gửi và rút tiền.",
+    "-223216785": "Dòng thứ hai của địa chỉ nhà*",
     "-594456225": "Dòng thứ hai của địa chỉ nhà",
     "-1315410953": "Bang/Tỉnh",
-    "-1940457555": "Postal/ZIP Code*",
+    "-1940457555": "Mã bưu chính/ZIP*",
     "-1964954030": "Mã số bưu chính/ZIP",
     "-1541554430": "Tiếp theo",
     "-71696502": "Trước",
@@ -1618,7 +1618,7 @@
     "-1738671831": "Độ dài mật khẩu phải từ 8 tới 25 ký tự.",
     "-1776746512": "Mật khẩu hiện tại và mật khẩu mới không thể giống nhau.",
     "-1465674403": "Thay đổi mật khẩu Deriv của bạn",
-    "-1233938428": "We recommend using a unique password — one that you don’t use for any other sites.",
+    "-1233938428": "Chúng tôi khuyên bạn nên sử dụng một mật khẩu đặc biệt — không chùng với các mật khẩu dùng ở các trang khác.",
     "-1868608634": "Mật khẩu hiện tại",
     "-89973258": "Gửi lại email trong {{seconds}} giây",
     "-1617352279": "Email nằm trong thư mục thư rác của bạn (Đôi khi mọi thứ bị lạc ở đó).",
@@ -2203,16 +2203,16 @@
     "-382495564": "Mật khẩu đã được đổi",
     "-2042845290": "Mật khẩu nhà đầu tư của bạn đã được đổi.",
     "-1882295407": "Mật khẩu của bạn đã được đổi.",
-    "-985529779": "Your DMT5 password is now the same as your Deriv account login password. To reset, please go to <0>Settings</0> page to change your password.",
+    "-985529779": "Mật khẩu DMT5 của bạn bây giờ cũng giống với mật khẩu đăng nhập tài khoản Deriv của bạn. Để đặt lại, vui lòng truy cập <0>Settings</0> để thay đổi mật khẩu của bạn.",
     "-254497873": "Sử dụng mật khẩu này để cấp quyền quan sát cho một người dùng khác. Trong khi họ có thể xem các tài khoản giao dịch của bạn, họ sẽ không thể thực hiện giao dịch hoặc có các hành động khác.",
     "-161656683": "Mật khẩu nhà đầu tư hiện tại",
     "-374736923": "Mật khẩu nhà đầu tư mới",
     "-1793894323": "Tạo hoặc đặt lại mật khẩu nhà đầu tư",
     "-1444706724": "Quản lý mật khẩu tài khoản thực DMT5 {{account_title}} của bạn",
-    "-1234339445": "All you’ll need from now is one password",
-    "-1418023997": "Unavailable because of too many failed attempts. Please try again in a minute or reset your account password to continue.",
-    "-140300511": "Please confirm your Deriv password to create a DMT5 account. If you’ve forgotten your password, click <0>Reset password</0>.",
-    "-1987408434": "Your MT5 Financial STP account will be opened through Deriv (BVI) Ltd. All trading in this account is subject to the regulations and guidelines of the British Virgin Islands Financial Services Commission (BVIFSC). None of your other accounts, including your Deriv account, is subject to the regulations and guidelines of the British Virgin Islands Financial Services Commission (BVIFSC).",
+    "-1234339445": "Từ giờ bạn chỉ cần nhập một mật khẩu",
+    "-1418023997": "Không khả dụng do có quá nhiều lần thử không thành công. Vui lòng thử lại sau một phút hoặc đặt lại mật khẩu tài khoản của bạn để tiếp tục.",
+    "-140300511": "Vui lòng xác nhận mật khẩu Deriv để tạo một tài khoản MT5. Nếu bạn quên mật khẩu của mình, hãy chọn <0>Đặt lại mật khẩu</0>.",
+    "-1987408434": "Tài khoản MT5 tài chính STP của bạn sẽ được mở thông qua Deriv (BVI) Ltd. Tất cả giao dịch trong tài khoản này phải tuân theo các quy định và hướng dẫn của Cơ quan dịch vụ tài chính Quần đảo Bristish Virgin (BVIFSC). Không có các tài khoản khác của bạn, bao gồm tài khoản Deriv của bạn, phải tuân theo các quy định và hướng dẫn của Cơ quan dịch vụ tài chính Quần đảo Bristish Virgin (BVIFSC).",
     "-1281078994": "Chọn server cho tài khoản DMT5 {{ account_type }} của bạn",
     "-1752211105": "Chuyển khoản ngay",
     "-2115960164": "Đổi mật khẩu DMT5",
@@ -2225,9 +2225,9 @@
     "-1756858413": "<0></0> đã được thêm vào tài khoản DMT5 {{title}} của bạn.",
     "-149993085": "Số dư hiện tại mới",
     "-538215347": "Tiền gửi ròng",
-    "-280147477": "All transactions",
+    "-280147477": "Tất cả giao dịch",
     "-137444201": "Mua",
-    "-360975483": "You've made no transactions of this type during this period.",
+    "-360975483": "Bạn đã không thực hiện giao dịch nào thuộc loại này trong khoảng thời gian này.",
     "-1231210510": "Tick",
     "-1239477911": "giây",
     "-1585766960": "tối thiểu",
