--- a/br_test_market_close/public/i18n/zh_tw.json
+++ b/br_test_market_close/public/i18n/zh_tw.json
@@ -142,7 +142,7 @@
     "278684544": "從 # 從尾端獲取子清單",
     "282319001": "查看您的圖像",
     "284527272": "反眾數",
-    "289898640": "TERMS OF USE",
+    "289898640": "使用條款",
     "292491635": "如果您選擇「止損」並指定限制虧損的金額，那麼當您的虧損大於或等於該金額時，您的頭寸將自動平倉。您的損失可能大於您投入的金額，具體取決於收盤時的市場價格。",
     "292589175": "這將以燭形圖清單顯示指定週期內的簡單移動平均線（SMA）。",
     "294305803": "帳戶設定管理",
@@ -337,7 +337,7 @@
     "626175020": "標準偏差上漲乘數{{ input_number }}",
     "626809456": "重新提交",
     "627292452": "<0>您的身份證明或地址證明</0>不符合我們的要求。請檢查您的電子郵件收取進一步指示。",
-    "627526394": "All you need from now is one password",
+    "627526394": "從現在起您只需要一個密碼即可",
     "627814558": "如果條件為真，此區塊將返回一個值。在以上任一函數塊中使用此區塊。",
     "629145209": "如果選擇了「AND」操作，則僅當兩個給定值均為「真」時，區塊才返回「真」",
     "632398049": "此區塊給項目或語句分配空值。",
@@ -471,7 +471,7 @@
     "835058671": "買入價總計",
     "835350845": "加上一兩個字。不常見的詞更好。",
     "837066896": "您的文件正在審查中，請於1-3天後再檢視.",
-    "839618971": "ADDRESS",
+    "839618971": "地址",
     "839805709": "為了順利驗證，我們需要更好的照片",
     "843508407": "差價合約和保證金交易的一體式多資產交易平台。",
     "845213721": "登出",
@@ -481,7 +481,7 @@
     "851508288": "此區塊含設定範圍內的指定數字。",
     "852583045": "跳動點清單字串",
     "854399751": "數字代碼必須只含數目字。",
-    "856713568": "Too many failed attempt",
+    "856713568": "失敗嘗試次數太多",
     "857986403": "做些甚麼",
     "860319618": "旅遊",
     "862283602": "電話號碼*",
@@ -528,7 +528,7 @@
     "931619246": "支持的平台:",
     "933126306": "此處輸入文字",
     "934835052": "潛在利潤",
-    "934932936": "PERSONAL",
+    "934932936": "個人",
     "937237342": "策略名稱不可為空",
     "937831119": "姓氏*",
     "937992258": "表",
@@ -603,7 +603,7 @@
     "1048947317": "對不起，此應用在 {{clients_country}} 無法使用。",
     "1049384824": "上漲",
     "1050844889": "報告",
-    "1052137359": "Family name*",
+    "1052137359": "姓氏*",
     "1053159279": "教育水準",
     "1055313820": "未偵測到文件",
     "1056325608": "您已建立了 DMT5 {{account_title}} 帳戶。",
@@ -658,7 +658,7 @@
     "1134879544": "帶有眩光的文檔示例",
     "1143730031": "方向為 {{ direction_type }}",
     "1144028300": "相對強度指標陣列(RSIA)",
-    "1144288893": "We’ve upgraded our system to support a single, more secure password across Deriv. Once you’ve set a new password, you can use it to log into all your Deriv and DMT5 accounts.",
+    "1144288893": "我們的系統已升級，以支持Deriv的單一更安全密碼。設定新密碼後，即可使用它登入所有Deriv和DMT5帳戶。",
     "1145927365": "指定秒數後運行內部區塊",
     "1151964318": "兩邊",
     "1154021400": "清單",
@@ -813,8 +813,8 @@
     "1367023655": "為確保您的虧損不超過您的投注金額，當虧損等於<0/>時，您的合約將自動平倉。",
     "1367488817": "4. 重啟交易條件",
     "1367990698": "波動率 10 指數",
-    "1368002992": "Go to Settings",
-    "1369709538": "Our terms of use",
+    "1368002992": "前往設定",
+    "1369709538": "我們的使用條款",
     "1371193412": "取消",
     "1371641641": "用手機打開連結",
     "1374627690": "最大帳戶餘額",
@@ -900,7 +900,7 @@
     "1484336612": "此區塊用於終止或繼續迴圈，並可以放置在迴圈塊內任何位置。",
     "1490583127": "DBot還不可用於真實帳戶",
     "1491392301": "<0>賣價</0>: {{sold_for}}",
-    "1492686447": "Your MT5 Financial STP account will be opened through Deriv (FX) Ltd. All trading in this account is subject to the regulations and guidelines of the Labuan Financial Service Authority (LFSA). None of your other accounts, including your Deriv account, is subject to the regulations and guidelines of the Labuan Financial Service Authority (LFSA).",
+    "1492686447": "您的 MT5 金融 STP 帳戶將通過 Deriv（FX）Ltd 開立。該帳戶的所有交易均受 Labuan 金融服務管理局（LFSA）的規定和準則的約束。所有其他帳戶，包括您的Deriv帳戶，均不受 Labuan 金融服務管理局（LFSA）的法規和準則的約束。",
     "1496810530": "英鎊/澳元",
     "1497911454": "請將<0>30 天交易額限制</0> 設定為刪除存款限額。",
     "1499080621": "嘗試執行無效的操作。",
@@ -925,7 +925,7 @@
     "1534796105": "取得變數值",
     "1539108340": "歐元指數",
     "1540585098": "拒絕",
-    "1541818425": "Reset password",
+    "1541818425": "重設密碼",
     "1541969455": "兩個",
     "1544642951": "如果您選擇「只會持續上漲」期權，只要入市現價後的價格持續上漲，您將獲得賠付。如果期間內的價格有任何下跌或相等於之前的價格， 您將不會獲得賠付。",
     "1549098835": "提款總額",
@@ -1064,7 +1064,7 @@
     "1791971912": "最近",
     "1794815502": "下載您的交易歷史。",
     "1801093206": "取得蠟燭圖線清單",
-    "1803338729": "Choose what type of contract you want to trade. For example, for the Rise/Fall trade type you can choose one of three options: Rise, Fall, or Both. Selected option will determine available options for the Purchase block.",
+    "1803338729": "選擇您要交易的合約類型。例如，對於「上漲/下跌」交易類型，您可以選擇以下三選項之一：「上漲」，「下跌」或「兩者都選」。選定的選項將確定「購入」區塊的可用選項。",
     "1804789128": "{{display_value}} 跳動點",
     "1806355993": "不收佣金",
     "1808058682": "區塊載入成功",
@@ -1136,7 +1136,7 @@
     "1903437648": "偵測到模糊的照片",
     "1905032541": "我們現在準備驗證您的身份",
     "1906639368": "如這是您首次嘗試建立密碼或您已忘了密碼，請重設。",
-    "1908023954": "Sorry, an error occurred while processing your request.",
+    "1908023954": "對不起，在處理您的請求時發生錯誤。",
     "1908239019": "確保所有文檔都在照片中",
     "1909769048": "中值",
     "1914014145": "今天",
@@ -1147,7 +1147,7 @@
     "1919030163": "好的自拍技巧",
     "1920217537": "比較",
     "1920468180": "如何使用SMA區塊",
-    "1921634159": "A few personal details",
+    "1921634159": "一些個人資料",
     "1922529883": "興旺 1000 指數",
     "1922955556": "使用更長的鍵盤列式並給予更多變化",
     "1923431535": "「止損」已被禁用，並且僅在「取消交易」到期時可用。",
@@ -1238,7 +1238,7 @@
     "2054500647": "此投訴政策可能會不時更改，適用於您在 Deriv (SVG) LLC 和 Deriv (V) Ltd 註冊的帳戶。",
     "2054889300": "建立「%1」",
     "2055317803": "複製連結到您的手機瀏覽器",
-    "2056801626": "Confirm your password",
+    "2056801626": "確認密碼",
     "2057419639": "退市現價",
     "2062912059": "功能 {{ function_name }} {{ function_params }}",
     "2063655921": "透過購入「收盤至最低值」 合約，您將贏取合約期間內乘數值乘以收盤與最低值之間的差額。",
@@ -1309,9 +1309,9 @@
     "-1575567374": "郵遞區號",
     "-755626951": "完成您的地址資料",
     "-1024240099": "地址",
-    "-584911871": "Select wallet currency",
+    "-584911871": "選擇錢包貨幣",
     "-1461267236": "請選擇貨幣",
-    "-1352330125": "CURRENCY",
+    "-1352330125": "貨幣",
     "-1027595143": "少於$25,000",
     "-40491332": "$25,000 - $50,000",
     "-1139806939": "$50,001 - $100,000",
@@ -1463,11 +1463,11 @@
     "-526636259": "錯誤 404",
     "-1030759620": "政府官員",
     "-1662154767": "近期的水電費帳單（例如電費、水費、煤氣費、固定電話費或互聯網費），銀行對帳單或政府簽發的帶有您的姓名和地址的信件。",
-    "-190838815": "We need this for verification. If the information you provide is fake or inaccurate, you won’t be able to deposit and withdraw.",
-    "-223216785": "Second line of address*",
+    "-190838815": "我們需要它進行驗證。如果您提供的資訊是虛假的或不正確的，您將無法存款和提款。",
+    "-223216785": "地址第二行*",
     "-594456225": "地址第二行",
     "-1315410953": "州/省",
-    "-1940457555": "Postal/ZIP Code*",
+    "-1940457555": "郵遞區號*",
     "-1964954030": "郵遞區號",
     "-1541554430": "下一頁",
     "-71696502": "之前",
@@ -1618,7 +1618,7 @@
     "-1738671831": "密碼長度必須是8-25個字元。",
     "-1776746512": "目前密碼和新密碼不能相同。",
     "-1465674403": "更改Deriv密碼",
-    "-1233938428": "We recommend using a unique password — one that you don’t use for any other sites.",
+    "-1233938428": "我們建議您使用唯一的密碼，您不會在其他任何網站上使用的密碼。",
     "-1868608634": "目前密碼",
     "-89973258": "{{seconds}} 秒後重傳電子郵件",
     "-1617352279": "郵件在您的垃圾郵箱（有時一些郵件會誤送到那兒）。",
@@ -2203,16 +2203,16 @@
     "-382495564": "密碼已更改",
     "-2042845290": "您的投資者密碼已被更改。",
     "-1882295407": "您的密碼已被更改.",
-    "-985529779": "Your DMT5 password is now the same as your Deriv account login password. To reset, please go to <0>Settings</0> page to change your password.",
+    "-985529779": "現在您的DMT5密碼與 Deriv帳戶的登入密碼相同。若要重設，請轉到<0>設定</0>頁面更改密碼。",
     "-254497873": "用此密碼給予其他使用者檢視權限。該使用者檢視您的交易帳戶時將無法交易或採取任何其他行動。",
     "-161656683": "目前投資者密碼",
     "-374736923": "新投資者密碼",
     "-1793894323": "建立或重設投資者密碼",
     "-1444706724": "管理 DMT5 真實{{account_title}} 帳戶密碼",
-    "-1234339445": "All you’ll need from now is one password",
-    "-1418023997": "Unavailable because of too many failed attempts. Please try again in a minute or reset your account password to continue.",
-    "-140300511": "Please confirm your Deriv password to create a DMT5 account. If you’ve forgotten your password, click <0>Reset password</0>.",
-    "-1987408434": "Your MT5 Financial STP account will be opened through Deriv (BVI) Ltd. All trading in this account is subject to the regulations and guidelines of the British Virgin Islands Financial Services Commission (BVIFSC). None of your other accounts, including your Deriv account, is subject to the regulations and guidelines of the British Virgin Islands Financial Services Commission (BVIFSC).",
+    "-1234339445": "從現在起您只需要一個密碼即可",
+    "-1418023997": "由於嘗試失敗次數過多，因此無法使用。請稍後重試或重設帳戶密碼以繼續操作。",
+    "-140300511": "請確認您的Deriv 密碼以建立DMT5帳戶。如果您忘了密碼，請點選<0>重設密碼</0>。",
+    "-1987408434": "您的 MT5 金融 STP 帳戶將通過 Deriv（BVI）Ltd 開立。該帳戶的所有交易均受英屬維爾京群島金融服務委員會（BVIFSC）的規定和準則的約束。所有其他帳戶，包括您的Deriv帳戶，均不受英屬維爾京群島金融服務委員會（BVIFSC）的法規和準則的約束。",
     "-1281078994": "選擇 DMT5 {{ account_type }} 帳戶的伺服器",
     "-1752211105": "立刻轉匯",
     "-2115960164": "重設 DMT5 密碼",
@@ -2225,9 +2225,9 @@
     "-1756858413": "<0></0>已記入您的 DMT5 {{title}} 帳戶 。",
     "-149993085": "目前新餘額",
     "-538215347": "淨存款",
-    "-280147477": "All transactions",
+    "-280147477": "所有交易",
     "-137444201": "買入",
-    "-360975483": "You've made no transactions of this type during this period.",
+    "-360975483": "此期間內您沒有進行過此類交易。",
     "-1231210510": "跳動點",
     "-1239477911": "秒",
     "-1585766960": "最小",
