--- a/br_test_market_close/public/i18n/zh_cn.json
+++ b/br_test_market_close/public/i18n/zh_cn.json
@@ -142,7 +142,7 @@
     "278684544": "从 # 从尾端获取子列表",
     "282319001": "查看您的图像",
     "284527272": "反众数",
-    "289898640": "TERMS OF USE",
+    "289898640": "使用条款",
     "292491635": "如果您选择“止损”并指定限制亏损的金额，那么当您的亏损大于或等于该金额时，您的头寸将自动平仓。您的损失可能大于您投入的金额，具体取决于收盘时的市场价格。",
     "292589175": "这将以烛形图列表显示指定周期内的简单移动平均线（SMA）。",
     "294305803": "账户设置管理",
@@ -337,7 +337,7 @@
     "626175020": "标准偏差上涨乘数{{ input_number }}",
     "626809456": "重新提交",
     "627292452": "<0>您的身份证明或地址证明</0> 不符合我们的要求。请检查您的电子邮件收取进一步指示。",
-    "627526394": "All you need from now is one password",
+    "627526394": "从现在起您只需要一个密码即可",
     "627814558": "如果条件为真，此程序块将返回一个值。在以上任一函数块中使用此程序块。",
     "629145209": "如果选择了“AND”操作，则仅当两个给定值均为“真”时，程序块才返回“真”",
     "632398049": "此程序块给项目或语句分配空值。",
@@ -471,7 +471,7 @@
     "835058671": "买入价总计",
     "835350845": "加上一两个字。不常见的词更好。",
     "837066896": "您的文件正在审查中，请于1-3天后再查看。",
-    "839618971": "ADDRESS",
+    "839618971": "地址",
     "839805709": "为了顺利验证，我们需要更好的照片",
     "843508407": "差价合约和保证金交易的一体式多资产交易平台。",
     "845213721": "注销",
@@ -481,7 +481,7 @@
     "851508288": "此程序块含设置范围内的指定数字。",
     "852583045": "跳动点列表字符串",
     "854399751": "数字代码必须只含数目字。",
-    "856713568": "Too many failed attempt",
+    "856713568": "失败尝试次数太多",
     "857986403": "做些什么",
     "860319618": "旅游",
     "862283602": "电话号码*",
@@ -528,7 +528,7 @@
     "931619246": "支持的平台:",
     "933126306": "此处输入文本",
     "934835052": "潜在利润",
-    "934932936": "PERSONAL",
+    "934932936": "个人",
     "937237342": "策略名称不可为空",
     "937831119": "姓氏*",
     "937992258": "表",
@@ -603,7 +603,7 @@
     "1048947317": "对不起，此应用在{{clients_country}} 无法使用。",
     "1049384824": "上升",
     "1050844889": "报表",
-    "1052137359": "Family name*",
+    "1052137359": "姓氏*",
     "1053159279": "教育水平",
     "1055313820": "未检测到文件",
     "1056325608": "您已创建了 DMT5 {{account_title}} 账户。",
@@ -658,7 +658,7 @@
     "1134879544": "带有眩光的文档示例",
     "1143730031": "方向为 {{ direction_type }}",
     "1144028300": "相对强度指标数组 (RSIA)",
-    "1144288893": "We’ve upgraded our system to support a single, more secure password across Deriv. Once you’ve set a new password, you can use it to log into all your Deriv and DMT5 accounts.",
+    "1144288893": "我们的系统已升级，以支持Deriv的单一更安全密码。设置新密码后，即可使用它登录所有Deriv和DMT5账户。",
     "1145927365": "在指定秒数后运行内部程序块",
     "1151964318": "两边",
     "1154021400": "列表",
@@ -813,8 +813,8 @@
     "1367023655": "为确保您的亏损不超过您的投注金额，当亏损等于<0/>时，您的合约将自动平仓。",
     "1367488817": "4. 重启交易条件",
     "1367990698": "波动率 10 指数",
-    "1368002992": "Go to Settings",
-    "1369709538": "Our terms of use",
+    "1368002992": "前往设置",
+    "1369709538": "我们的使用条款",
     "1371193412": "取消",
     "1371641641": "用手机打开链接",
     "1374627690": "最大账户余额",
@@ -900,7 +900,7 @@
     "1484336612": "此程序块用于终止或继续循环，并可以放置在循环块内任何位置。",
     "1490583127": "DBot还不可用于真实账户",
     "1491392301": "<0>卖价</0>: {{sold_for}}",
-    "1492686447": "Your MT5 Financial STP account will be opened through Deriv (FX) Ltd. All trading in this account is subject to the regulations and guidelines of the Labuan Financial Service Authority (LFSA). None of your other accounts, including your Deriv account, is subject to the regulations and guidelines of the Labuan Financial Service Authority (LFSA).",
+    "1492686447": "您的 MT5 金融 STP 账户将通过 Deriv（FX）Ltd 开立。该账户的所有交易均受 Labuan 金融服务管理局（LFSA）的规定和准则的约束。所有其他账户，包括您的Deriv账户，均不受 Labuan 金融服务管理局（LFSA）的法规和准则的约束。",
     "1496810530": "英镑/澳元",
     "1497911454": "请将<0>30 天交易额限制</0>设置为删除存款限额。",
     "1499080621": "尝试执行无效的操作。",
@@ -925,7 +925,7 @@
     "1534796105": "取得变量值",
     "1539108340": "欧元指数",
     "1540585098": "拒绝",
-    "1541818425": "Reset password",
+    "1541818425": "重置密码",
     "1541969455": "两个",
     "1544642951": "如果您选择“只会持续上涨”期权，只要入市现价后的价格持续上涨，您将获得赔付。如果期间内的价格有任何下跌或相等于之前的价格， 您将不会获得赔付。",
     "1549098835": "提款总额",
@@ -1064,7 +1064,7 @@
     "1791971912": "最近",
     "1794815502": "下载您的交易历史。",
     "1801093206": "取得烛形线列表",
-    "1803338729": "Choose what type of contract you want to trade. For example, for the Rise/Fall trade type you can choose one of three options: Rise, Fall, or Both. Selected option will determine available options for the Purchase block.",
+    "1803338729": "选择您要交易的合约类型。例如，对于“上涨/下跌”交易类型，您可以选择以下三选项之一：“上涨”，“下跌”或“两者都选”。选定的选项将确定“购入”程序块的可用选项。",
     "1804789128": "{{display_value}} 跳动点",
     "1806355993": "不收佣金",
     "1808058682": "程序块加载成功",
@@ -1136,7 +1136,7 @@
     "1903437648": "检测到模糊的照片",
     "1905032541": "我们现在准备验证您的身份",
     "1906639368": "如这是您首次尝试创建密码或您已忘了密码，请重置。",
-    "1908023954": "Sorry, an error occurred while processing your request.",
+    "1908023954": "对不起，您的请求处理发生错误。",
     "1908239019": "确保所有文档都在照片中",
     "1909769048": "中值",
     "1914014145": "今天",
@@ -1147,7 +1147,7 @@
     "1919030163": "好的自拍技巧",
     "1920217537": "比较",
     "1920468180": "如何使用SMA程序块",
-    "1921634159": "A few personal details",
+    "1921634159": "一些个人资料",
     "1922529883": "兴旺 1000 指数",
     "1922955556": "使用更长的键盘列式并给予更多变化",
     "1923431535": "“止损”已被禁用，并且仅在“取消交易”到期时可用。",
@@ -1238,7 +1238,7 @@
     "2054500647": "此投诉政策可能会不时更改，适用于您在 Deriv (SVG) LLC 和 Deriv (V) Ltd 注册的账户。",
     "2054889300": "创建\"%1\"",
     "2055317803": "复制链接到您的手机浏览器",
-    "2056801626": "Confirm your password",
+    "2056801626": "确认密码",
     "2057419639": "退市现价",
     "2062912059": "功能 {{ function_name }} {{ function_params }}",
     "2063655921": "透过购入“收盘至最低值”合约，您将赢取合约期间内乘数值乘以收盘与最低值之间的差额。",
@@ -1309,9 +1309,9 @@
     "-1575567374": "邮政编码",
     "-755626951": "完成您的地址资料",
     "-1024240099": "地址",
-    "-584911871": "Select wallet currency",
+    "-584911871": "选择钱包货币",
     "-1461267236": "请选择货币",
-    "-1352330125": "CURRENCY",
+    "-1352330125": "货币",
     "-1027595143": "少于$25,000",
     "-40491332": "$25,000 - $50,000",
     "-1139806939": "$50,001 - $100,000",
@@ -1463,11 +1463,11 @@
     "-526636259": "错误 404",
     "-1030759620": "政府官员",
     "-1662154767": "近期的水电费账单（例如电费、水费、煤气费、固定电话费或互联网费），银行对账单或政府签发的带有您的姓名和地址的信件。",
-    "-190838815": "We need this for verification. If the information you provide is fake or inaccurate, you won’t be able to deposit and withdraw.",
-    "-223216785": "Second line of address*",
+    "-190838815": "我们需要它进行验证。如果您提供的信息是虚假的或不正确的，您将无法存款和提款。",
+    "-223216785": "地址第二行*",
     "-594456225": "地址第二行",
     "-1315410953": "州/省",
-    "-1940457555": "Postal/ZIP Code*",
+    "-1940457555": "邮政编码*",
     "-1964954030": "邮政编码",
     "-1541554430": "下一页",
     "-71696502": "之前",
@@ -1618,7 +1618,7 @@
     "-1738671831": "密码长度须介于 8至25 个字符。",
     "-1776746512": "当前密码和新密码不能相同。",
     "-1465674403": "更改Deriv密码",
-    "-1233938428": "We recommend using a unique password — one that you don’t use for any other sites.",
+    "-1233938428": "我们建议您使用唯一的密码，您不会在其他任何网站上使用的密码。",
     "-1868608634": "当前密码",
     "-89973258": "{{seconds}}后重发电子邮件",
     "-1617352279": "邮件在您的垃圾邮箱（有时一些邮件会误送到那儿）。",
@@ -2203,16 +2203,16 @@
     "-382495564": "密码已更改",
     "-2042845290": "您的投资者密码已被更改.",
     "-1882295407": "您的密码已被更改。",
-    "-985529779": "Your DMT5 password is now the same as your Deriv account login password. To reset, please go to <0>Settings</0> page to change your password.",
+    "-985529779": "现在您的DMT5密码与Deriv账户的登录密码相同。若要重置，请转到<0>设置</0>页面更改密码。",
     "-254497873": "用此密码给予其他用户查看权限。当该用户查看您的交易账户时将无法交易或采取任何其他行动。",
     "-161656683": "当前投资者密码",
     "-374736923": "新投资者密码",
     "-1793894323": "创建或重置投资者密码",
     "-1444706724": "管理 DMT5 真实 {{account_title}} 账户密码",
-    "-1234339445": "All you’ll need from now is one password",
-    "-1418023997": "Unavailable because of too many failed attempts. Please try again in a minute or reset your account password to continue.",
-    "-140300511": "Please confirm your Deriv password to create a DMT5 account. If you’ve forgotten your password, click <0>Reset password</0>.",
-    "-1987408434": "Your MT5 Financial STP account will be opened through Deriv (BVI) Ltd. All trading in this account is subject to the regulations and guidelines of the British Virgin Islands Financial Services Commission (BVIFSC). None of your other accounts, including your Deriv account, is subject to the regulations and guidelines of the British Virgin Islands Financial Services Commission (BVIFSC).",
+    "-1234339445": "从现在起您只需要一个密码即可",
+    "-1418023997": "由于尝试失败次数过多，因此无法使用。请稍后重试或重置账户密码以继续操作。",
+    "-140300511": "请确认您的Deriv密码以创建DMT5账户。如果您忘了密码，请单击<0>重置密码</0>。",
+    "-1987408434": "您的 MT5 金融 STP 账户将通过 Deriv（BVI）Ltd 开立。该账户的所有交易均受英属维尔京群岛金融服务委员会（BVIFSC）的规定和准则的约束。所有其他账户，包括您的Deriv账户，均不受英属维尔京群岛金融服务委员会（BVIFSC）的法规和准则的约束。",
     "-1281078994": "选择 DMT5 {{ account_type }} 账户的服务器",
     "-1752211105": "立刻转汇",
     "-2115960164": "重设 DMT5 密码",
@@ -2225,9 +2225,9 @@
     "-1756858413": "<0></0>已记入您的 DMT5 {{title}} 账户 。",
     "-149993085": "当前新余额",
     "-538215347": "净存款",
-    "-280147477": "All transactions",
+    "-280147477": "所有交易",
     "-137444201": "买入",
-    "-360975483": "You've made no transactions of this type during this period.",
+    "-360975483": "您在此期间没有进行过此类交易。",
     "-1231210510": "跳动点",
     "-1239477911": "秒",
     "-1585766960": "最小",
